Fixed uneven spacing in card info fields

--- a/css/card.css
+++ b/css/card.css
@@ -21,7 +21,7 @@
     --card-colors-raise: 0.5;
     --card-colors-overlap: 0.25;
     --card-colors-gradient: 280%;
-    --card-info-spacing: 14px;
+    --card-info-spacing: 12px;
     --card-info-color: #d7d4c8;
     --card-info-slant: -18deg;
     --card-info-padding-right: 6px;
